// Vitest Snapshot v1

exports[`Select > add className 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors foo"
/>
`;

exports[`Select > child nodes > children 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <option
    value="meximelt"
  >
    Mexi-melt
  </option>
</select>
`;

exports[`Select > child nodes > children with choices 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <option
    value="mild"
  >
    Mild
  </option>
  <option
    value="hot"
  >
    Hot
  </option>
  <option
    value="fire"
  >
    Fire
  </option>
  <option
    value="meximelt"
  >
    Mexi-melt
  </option>
</select>
`;

exports[`Select > choices > choice 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <option
    value="mild"
  >
    Mild
  </option>
  <option
    value="hot"
  >
    Hot
  </option>
  <option
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select > choices > choices 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <option
    value="Mild"
  >
    Mild
  </option>
  <option
    value="Hot"
  >
    Hot
  </option>
  <option
    value="Fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select > choices > choices as objects 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <option
    value="mild"
  >
    Mild
  </option>
  <option
    value="hot"
  >
    Hot
  </option>
  <option
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select > empty 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
/>
`;

exports[`Select > groups > no value 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <optgroup
    label="Tacos"
  >
    <option
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    label="Saunce"
  >
    <option
      value="mild"
    >
      Mild
    </option>
    <option
      value="hot"
    >
      Hot
    </option>
    <option
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`Select > groups > value 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <optgroup
    label="Tacos"
  >
    <option
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    label="Saunce"
  >
    <option
      value="mild"
    >
      Mild
    </option>
    <option
      value="hot"
    >
      Hot
    </option>
    <option
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`Select > groups > values 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
  multiple=""
>
  <optgroup
    label="Tacos"
  >
    <option
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    label="Saunce"
  >
    <option
      value="mild"
    >
      Mild
    </option>
    <option
      value="hot"
    >
      Hot
    </option>
    <option
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`Select > multiple > false 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
/>
`;

exports[`Select > multiple > falsey 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
  multiple=""
/>
`;

exports[`Select > multiple > string 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
  multiple=""
/>
`;

exports[`Select > multiple > true 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
  multiple=""
/>
`;

exports[`Select > multiple > truthy 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
  multiple=""
/>
`;

exports[`Select > placeholder > choices 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <option
    value=""
  >
    -- Select Flavor --
  </option>
  <option
    value="Mild"
  >
    Mild
  </option>
  <option
    value="Hot"
  >
    Hot
  </option>
  <option
    value="Fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select > placeholder > choices as objects 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <option
    value=""
  >
    -- Select Flavor --
  </option>
  <option
    value="mild"
  >
    Mild
  </option>
  <option
    value="hot"
  >
    Hot
  </option>
  <option
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select > placeholder > no choices 1`] = `
<select
  class="my-1 mr-1 last:mr-0 rounded-md border-gray-300 shadow-sm focus:border-pink focus:ring focus:ring-pink-200 focus:ring-opacity-50 transition-colors"
>
  <option
    value=""
  >
    -- Select Flavor --
  </option>
</select>
`;
